# pkg_cv_ros_tutorial_by_dhanuzch

./: CMakeLists.txt  LICENSE  README.md  manifest.xml  package.xml
launch/: 1_world.launch  1_world_and_script.launch  2_world.launch  2_world_and_script.launch
models/camera1/: model.sdf
models/qr_wall/meshes/: qr_wall.dae
scripts/: camera_read.py  decode_qr.py
worlds/: 1_world.world  2_world.world
