<?xml version="1.0"?>
<package format="2">
  <name>pkg_cv_ros_tutorial_by_dhanuzch</name>
  <version>0.0.0</version>
  <description>The pkg_cv_ros_tutorial_by_dhanuzch package</description>

  <maintainer email="mr.dhanush29@gmail.com">dhanuzch</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>


  </export>
</package>
